--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@chibuzoraustine/mpw-node",
+    "name": "mpw-node",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
