--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "dotenv": "^16.4.4"
+    "dotenv": "^16.4.4",
+    "tsconfig-paths": "^4.2.0"
   },
   "repository": {
     "type": "git",
